--- a/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/class-list-attribute/class-list-attribute.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/class-list-attribute/class-list-attribute.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <button class="btn btn-warning" data-toggle="collapse" data-target="#listaAttributi" (click)="closeCollapsedList(lista)">
+  <button class="btn btn-warning" data-toggle="collapse" data-target="#listaAttributi" (click)="closeCollapsedList()">
     <span class="glyphicon glyphicon-triangle-left" aria-hidden="true"></span>&nbsp;Lista Attributi
   </button>
   <div id="listaAttributi" class="collapse" *ngIf="this.classMenuService.name">
