FIX add metodo alla classe
-il codice non è ancora ben pulito e il css è da migliorare

--- a/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/class-add-method/class-add-method.component.css
+++ b/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/class-add-method/class-add-method.component.css
@@ -39,7 +39,18 @@ input[type="checkbox"]:checked + label:before {
   cursor: pointer;
 }
 
-/* table {
-  position: relative;
-  width: 25vw;
-} */
+.tabella {
+  overflow-y: auto;
+  max-height: 200px;
+}
+
+.display {
+  text-align: left;
+}
+
+.remove {
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  float: right;
+}
