--- a/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/display-class-name/display-class-name.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/display-class-name/display-class-name.component.html
@@ -1,5 +1,7 @@
 <div class="container">
-{{this.classMenuService.name}}
+  <span class="className">
+    {{this.classMenuService.name}}
+  </span>
   <button class="btn btn-warning" (click)="removeClass(this.classMenuService.name)" title="Rimuovi classe">
     <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
   </button>
