Completat0 edit-class-menu
il css è da sistemare, co son ancora degli errori e c’è da testare maggiormente; da problemi con l’aggiunta del metodo main.

--- a/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/edit-class-menu.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/edit-class-menu.component.html
@@ -4,5 +4,7 @@
   <app-class-add-attribute></app-class-add-attribute>
   <app-class-list-attribute></app-class-list-attribute>
   <app-class-add-method></app-class-add-method>
+  <app-class-list-method></app-class-list-method>
+  <app-class-add-main-method></app-class-add-main-method>
 </div>
 
