--- a/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/class-add-main-method/class-add-main-method.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/class-add-main-method/class-add-main-method.component.html
@@ -1,3 +1,6 @@
-<p>
-  class-add-main-method works!
-</p>
+<div class="container" [hidden]="this.classMenuService.isThereAMain">
+  {{this.classMenuService.isThereAMain}}
+    <button  class="btn btn-warning" (click)="addMain()">
+      <span class="glyphicon glyphicon-asterisk" aria-hidden="true"></span>&nbsp;Aggiungi Metodo Main
+    </button>
+  </div>
