--- a/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/class-list-method/class-list-method.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/class-list-method/class-list-method.component.html
@@ -1,3 +1,21 @@
-<p>
-  class-list-method works!
-</p>
+<div class="container" *ngIf="this.classMenuService.selectedClass">
+    <button class="btn btn-warning" data-toggle="collapse" data-target="#listaMetodi" (click)='closeCollapsedList()'>
+        <span class="glyphicon glyphicon-triangle-left" aria-hidden="true"></span>&nbsp;Lista Metodi
+      </button>
+        <div id="listaMetodi" class="collapse" *ngIf="this.classMenuService.name">
+          Lista metodi
+          <ul class="list-group">
+            <li class="list-group-item list-group-item-warning" *ngFor="let met of this.classMenuService.getMetodi()">
+              <span>{{met.accesso}} {{met.staticString()}} {{met.nome}}({{met.paramToString()}}): {{met.tipoRitorno}}
+                <button class="btn btn-warning" (click)="removeMetodo(met.nome)">
+                   <span class="glyphicon glyphicon-trash" aria-hidden="true" title="Rimuovi"></span>
+                </button>
+                <button class="btn btn-warning" (click)="modifyMetodo(met.nome)" title="Modifica">
+                  <span class="glyphicon glyphicon-pencil" aria-hidden="true" title="Modifica"></span>
+                </button>
+              </span>
+            </li>
+          </ul>
+        </div>
+
+</div>
