--- a/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/edit-class-menu.component.css
+++ b/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/edit-class-menu.component.css
@@ -1,9 +1,11 @@
 .container-fluid {
   position: absolute;
   width: 100%;
+  max-height: 94vh;
   margin: 0;
   padding: 0;
   background-color: dimgrey;
   border-left: 1px solid black;
   text-align: center;
+  overflow-y: auto;
 }
