FIX Errore activity
Ora quando si è nel menù activity e si seleziona una shape, non compare il menù delle classi.

--- a/Front-End/src/app/components/editor-container/components/editor/editor.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/editor.component.html
@@ -3,7 +3,7 @@
   <app-toolbar></app-toolbar>
 
 </div>
-<div [hidden]="!selectedCell" class="editClass">
+<div *ngIf="selectedCell && !mainEditorService.getActivityModeStatus()" class="editClass">
     <app-edit-class-menu></app-edit-class-menu>
     <!-- <class-menu [hidden]="mainEditorService.getActivityModeStatus()"></class-menu> -->
 </div>
