Ritocchi css class-menu

--- a/Front-End/src/app/components/editor-container/components/editor/components/activity-menu/activity-menu.component.css
+++ b/Front-End/src/app/components/editor-container/components/editor/components/activity-menu/activity-menu.component.css
@@ -1,6 +1,5 @@
 .menu {
-  background-color: #E0E0E0;
-   /*#EAEAF1;*/
+  background-color: dimgrey;
   border-left: 1px solid black;
   border-bottom: 1px solid black;
   font-weight: bold;
