--- a/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/change-class-name/change-class-name.component.css
+++ b/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/change-class-name/change-class-name.component.css
@@ -4,6 +4,10 @@
   padding: 0;
   padding-top: 10px;
   padding-bottom: 10px;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid white;
   width: 100%;
+}
+
+label {
+  color: darkorange;
 }
