--- a/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/class-add-main-method/class-add-main-method.component.css
+++ b/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/class-add-main-method/class-add-main-method.component.css
@@ -4,6 +4,6 @@
   padding: 0;
   padding-top: 10px;
   padding-bottom: 10px;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid white;
   width: 100%;
 }
