--- a/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/class-list-attribute/class-list-attribute.component.css
+++ b/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/class-list-attribute/class-list-attribute.component.css
@@ -4,7 +4,7 @@
   padding: 0;
   padding-top: 10px;
   padding-bottom: 10px;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid white;
   width: 100%;
 }
 
@@ -68,4 +68,20 @@ input[type="checkbox"]:checked + label:before {
   content: "\2713";
   text-align: center;
   cursor: pointer;
+}
+
+li button {
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  margin-left: 5px;
+}
+
+.text {
+  font-size: 10px;
+}
+
+.titolo {
+  margin: auto 5px;
+  color: darkorange;
 }
