FIX selezione interfacce
inizialmente i tasti nel menù erano stati messi disable, ho cambiato questa opzione in hidden e ho spostato tale verifica nel lv superiore del component

--- a/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/class-list-attribute/class-list-attribute.component.css
+++ b/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/class-list-attribute/class-list-attribute.component.css
@@ -26,17 +26,11 @@ li {
   border: 1px solid darkgoldenrod;
 }
 
-/* li:hover {
-  background-color: #FFBF66;
-  color: whitesmoke;
-} */
-
-button .btnLista {
-  background-color: #C0C0C0;
-}
-
-button .btnLista:hover {
-  background-color: dimgray;
+.btnLista {
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  margin-left: 5px;
 }
 
 .checkboxContainer {
@@ -68,13 +62,6 @@ input[type="checkbox"]:checked + label:before {
   content: "\2713";
   text-align: center;
   cursor: pointer;
-}
-
-li button {
-  width: 20px;
-  height: 20px;
-  padding: 0;
-  margin-left: 5px;
 }
 
 .text {
