--- a/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/class-add-attribute/class-add-attribute.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/components/class-add-attribute/class-add-attribute.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <button class="btn btn-warning" [disabled]="this.classMenuService.mainEditorService.selectedClasse.isInterface()" data-toggle="collapse" data-target="#aggiungiAttributo">
+  <button class="btn btn-warning" data-toggle="collapse" data-target="#aggiungiAttributo">
     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> &nbsp; Aggiungi Attributo
   </button>
   <div id="aggiungiAttributo"  class="collapse">
