--- a/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/edit-class-menu.component.html
+++ b/Front-End/src/app/components/editor-container/components/editor/components/edit-class-menu/edit-class-menu.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
   <app-display-class-name></app-display-class-name>
   <app-change-class-name></app-change-class-name>
-  <app-class-add-attribute></app-class-add-attribute>
-  <app-class-list-attribute></app-class-list-attribute>
+  <app-class-add-attribute [hidden]="this.classMenuService.mainEditorService.selectedClasse.isInterface()"></app-class-add-attribute>
+  <app-class-list-attribute [hidden]="this.classMenuService.mainEditorService.selectedClasse.isInterface()"></app-class-list-attribute>
   <app-class-add-method></app-class-add-method>
   <app-class-list-method></app-class-list-method>
-  <app-class-add-main-method></app-class-add-main-method>
+  <app-class-add-main-method [hidden]="this.classMenuService.mainEditorService.selectedClasse.isInterface()" ></app-class-add-main-method>
 </div>
 
